# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml
budgeting-app/: pyproject.toml  tasks.py
budgeting-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
budgeting-app/src/: .coveragerc  database_connection.py  initialize_database.py  main.py
budgeting-app/src/entities/: budgeting.py  expense.py  user.py
budgeting-app/src/repositories/: budget_repository.py  user_repository.py
budgeting-app/src/services/: budgeting_services.py
budgeting-app/src/tests/repositories/: budget_repository_test.py  user_repository_test.py
budgeting-app/src/tests/services/: budgeting_services_test.py
budgeting-app/src/ui/: budget_tab.py  expense_tab.py  gui.py  login_view.py  manage_view.py  menu.py  register_view.py
budgeting-app/src/ui/components/: budget_selector.py  budget_summary.py  budget_tab.py  expense_history.py  expense_tab.py
dokumentaatio/: vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko3/: hsl.md  monopoli.md
