[project]
name = "budgeting-app"
version = "0.1.0"
description = ""
authors = [
    {name = "NuuNiem",email = "nuutti.a.niemela@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cowsay (>=6.1,<7.0)",
    "tk",
    "pylint (>=3.3.6,<4.0.0)",
    "invoke (>=2.2.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "sv-ttk @ git+https://github.com/rdbende/Sun-Valley-ttk-theme.git",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
pytest = "^8.3.5"
coverage = "^7.8.0"
autopep8 = "^2.3.2"

